Changes for 3.0.0alpha3

New features:
A.F....... [ZBX-1357] updated Brazilian Portuguese, Czech, Italian, Japanese and Russian translations; thanks to Zabbix translators (Richlv)
...G...... [ZBXNEXT-494] fixed proc.cpu.util help item description (wiper)
....I..... [ZBXNEXT-2056] added an HTTP response code value map (Richlv)

Bug fixes:
.......PS. [ZBX-9666] fixed invalid SNMP dynamic index cache if 2 SNMP agents have the same IP, port and OID (dimir, igors, Sandis)

--------------------------------------------------------------------------------
Changes for 3.0.0alpha2

New features:
..F....... [ZBXNEXT-2662] added a new predefined period (3 days) for the timeline (Sasha)
A......... [ZBXNEXT-2581] added returning of permissions for usergroup.get (Gunars, Ivo)
..F....... [ZBX-8820] improved bulk acknowledge of the events (Sasha)
..F....... [ZBXNEXT-210] changed macro type labels in template configuration form (Gunars)
A.F.I..PS. [ZBXNEXT-1241] added host inventory mode setting for new and discovered hosts (Gunars, Sasha, wiper)
...G...... [ZBXNEXT-494] added support for proc.cpu.util key on Linux and Solaris platforms (wiper)
A.F....... [ZBX-1357] updated Czech and Japanese translations; thanks to Zabbix translators (Richlv)

Bug fixes:
...G...... [ZBXNEXT-1078] removed 'proc.mem[]' 5-th parameter (memtype) value 'dvm' on AIX (Andris)
A......... [ZBX-9807] fixed undefined offset errors in configuration export when processing triggers that have items with discovered applications (Ivo)
A.F....... [ZBX-9810] fixed trigger prototype expression inheritance incorrectly assigning an invalid expression to child objects and trigger expression test popup displaying a missing class (Ivo)
.......PS. [ZBX-7847] added functionality that stops polling inactive IPMI hosts (igors)
...G...... [ZBX-9430] fixed Windows eventlog item incorrectly interpreting 0x00000103 return value as an error (wiper)
..F....... [ZBXNEXT-2662] fixed a map element editing form (Sasha)